src/app/app.component.css
.navbar-brand {
    margin-left: 0 !important;
    margin-right: 50px;
    padding: 0;
    line-height: 70px;
}
.navbar-brand img {
    display: inline;
    padding-right: 15px;
    margin-right: 15px;
    border-right: 1px solid #fff;
}
.fa, .glyphicon, li {
    color: #f5f5f5;
    font-size: 1em;
    cursor: pointer;
}
li button {
    padding: 15px;
    color: #000;
}
.nav > li > a {
    padding: 25px 25px 20px 25px;
}
.nav > li > a:hover, .nav > li > a:active {
    color: #fff;
    border-bottom: 5px solid #46850f;
}

@media (min-width: 768px) {
  .navbar {
    min-height: 70px;
  }
}

